...
            "state": "translated",
            "value": "Опасная зона"
          }
        }
      }
    },
    "Dashboard": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Panel"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "仪表盘"
...
            "state": "translated",
            "value": "Записывайте вес как минимум 7 дней, чтобы узнать, когда вы достигнете цели."
          }
        }
      }
    },
    "Logbook": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Registro"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "记录本"
...
            "state": "translated",
            "value": "Установите цель"
          }
        }
      }
    },
    "Settings": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Ajustes"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "设置"
...
