...
                        .cornerRadius(10)
                }
                .disabled(!isValidWeight)
                .padding(.horizontal)
            }
            .padding(.top, 30)
            .navigationTitle("Add Weight")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .cancellationAction) {
                    Button("Cancel") {
                        dismiss()
                    }
...
